# Self_Gui

./: .gitignore  CMakeLists.txt
app/: main.cpp  nodebuilder.cpp  nodebuilder.h
cmake/: FindOpenCVSetup.cmake  FindTesseractSetup.cmake
communication/: NOTICE.md  clients.cpp  clients.h  codec.cpp  codec.h  communicationmanager.cpp  communicationmanager.h  crc.cpp  crc.h  itransport.h  mocktransport.cpp  mocktransport.h  types.cpp  types.h
core/command/: documentcommands.cpp  documentcommands.h
core/model/: connectionmodel.cpp  connectionmodel.h  document.cpp  document.h  documentsettings.cpp  documentsettings.h  nodemodel.cpp  nodemodel.h  nodestyle.cpp  nodestyle.h  portmodel.cpp  portmodel.h
core/registry/: nodefactory.cpp  nodefactory.h
core/serialization/: documentserializer.cpp  documentserializer.h
devices/camera/: icameradevice.cpp  icameradevice.h
docs/: Opencv_MinGW_cpp配置说明.md  Selt_Vision_Studio_使用手册.html  Selt_Vision_Studio_使用手册.md  视觉模块化编辑器设计说明.md
docs/architecture/: README.md  algorithm-factor-checklist.md  communication-operators.md  communication-production-baseline.md  communication-production-checklist.md  dependency-rules.md  editor-interaction-variable-scopes.md  editor-roadmap-checklist.md  industrial-operator-foundation.md  industrial-productization-session.md  industrial-validation.md  migration-log.md  opencv-substitution-matrix.md  operator-interaction-workspace.md  phase-completion-0-12.md  production-hardening-checklist.md  recognition-operators.md  roadmap-baseline.md  ui-guidelines.md  ui-visionmaster-checklist.md  vision-measurement-closed-loop.md  xvision-feature-map.md
docs/deployment/: README.md
docs/troubleshooting/: selt-gui-exe-missing.md
foundation/: CMakeLists.txt  appsettings.cpp  appsettings.h  selterror.cpp  selterror.h  seltid.cpp  seltid.h  seltlogging.cpp  seltlogging.h  seltversion.cpp  seltversion.h
graphics/canvas/: canvasscene.cpp  canvasscene.h  canvasview.cpp  canvasview.h
graphics/items/: connectiongraphicsitem.cpp  connectiongraphicsitem.h  nodegraphicsitem.cpp  nodegraphicsitem.h  portgraphicsitem.cpp  portgraphicsitem.h
plugin_host/: pluginhost.cpp  pluginhost.h
plugins/examples/invert_node/: CMakeLists.txt  invertnodeplugin.cpp  invertnodeplugin.h
plugins/nodes/: README.md
resources/: selt.qrc
resources/icons/: NOTICE.md
resources/theme/: theme_dark.qss  theme_light.qss
scripts/: generate_app_icon_ico.py  generate_vision_icons.py  package_windows.ps1  update_selt_qrc_vision_icons.py  verify_vision_icons.py
tests/: metrologytesthelpers.h  test_algorithm_benchmark.cpp  test_algorithm_factors.cpp  test_binding_editor.cpp  test_blob_find_circle_optimize.cpp  test_builtin_executors.cpp  test_camera_lifecycle.cpp  test_communication.cpp  test_data_binding.cpp  test_document.cpp  test_domain_runtime.cpp  test_editor_roadmap.cpp  test_editor_variable_ux.cpp  test_execution_scope.cpp  test_extended_roi.cpp  test_flow_snapshot.cpp  test_graph_validation.cpp  test_industrial_convergence.cpp  test_industrial_measurement.cpp  test_input_source_runtime.cpp  test_interactive_geometry_coverage.cpp  test_measurement_closed_loop.cpp  test_measurement_domain.cpp  test_partial_run_controller.cpp  test_phase3_production.cpp  test_plugin_diagnostics.cpp  test_plugin_host.cpp  test_port_exposure.cpp  test_production_hardening.cpp  test_project_container.cpp  test_project_resource_store.cpp  test_project_service.cpp  test_recipe_history.cpp  test_recognition_executors.cpp  test_resource_migration.cpp  test_result_sink.cpp  test_roi_applier.cpp  test_run_analysis.cpp  test_run_controller.cpp  test_run_record.cpp  (+8 more)
ui/: bindingeditor.cpp  bindingeditor.h  calibrationdialog.cpp  calibrationdialog.h  communicationdock.cpp  communicationdock.h  flowbarwidget.cpp  flowbarwidget.h  imagepreviewwidget.cpp  imagepreviewwidget.h  inputsourcedock.cpp  inputsourcedock.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  measurementpanel.cpp  measurementpanel.h  nodecatalogmodel.cpp  nodecatalogmodel.h  nodeinspectordialog.cpp  nodeinspectordialog.h  nodepalette.cpp  nodepalette.h  propertypanel.cpp  propertypanel.h  resourcebrowserdock.cpp  resourcebrowserdock.h  runtimemonitorwidget.cpp  runtimemonitorwidget.h  variabledock.cpp  variabledock.h
ui/theme/: iconprovider.cpp  iconprovider.h  operatorpreferences.h  theme_dark.qss  theme_light.qss  themecontroller.cpp  themecontroller.h  uistyle.cpp  uistyle.h
ui/widgets/: collapsiblesection.cpp  collapsiblesection.h  compactparamrow.cpp  compactparamrow.h  inspectorheader.cpp  inspectorheader.h
vision/algorithms/: caliperalgorithm.cpp  caliperalgorithm.h  circlemeasurementalgorithm.cpp  circlemeasurementalgorithm.h  grayscalealgorithm.cpp  grayscalealgorithm.h  imagefilteralgorithms.cpp  imagefilteralgorithms.h  imageloader.cpp  imageloader.h  linemeasurementalgorithm.cpp  linemeasurementalgorithm.h  locatealgorithms.cpp  locatealgorithms.h  opencvguard.h  preprocessalgorithms.cpp  preprocessalgorithms.h  recognitionalgorithms.cpp  recognitionalgorithms.h  rectanglemeasurementalgorithm.cpp  rectanglemeasurementalgorithm.h  regionalgorithms.cpp  regionalgorithms.h  roiapplier.cpp  roiapplier.h  subpixelalgorithms.cpp  subpixelalgorithms.h  thresholdalgorithm.cpp  thresholdalgorithm.h
vision/data/: datatype.cpp  datatype.h
vision/domain/: projectvariables.cpp  projectvariables.h  variablescope.cpp  variablescope.h  visionflow.cpp  visionflow.h  visionproject.cpp  visionproject.h  workingmode.h
vision/execution/: visionpipeline.cpp  visionpipeline.h
vision/model/: autoparameter.h  calibrationmodel.cpp  calibrationmodel.h  calibrationstore.cpp  calibrationstore.h  contourdata.h  extendedroi.h  interactivegeometry.h  measurementdefinition.cpp  measurementdefinition.h  measurementresult.cpp  measurementresult.h  moduledescriptor.h  moduleparamdef.h  modulestatus.h  moduleuischema.h  modulevisualstyle.h  operatoroutcome.h  overlayitems.h  portexposure.cpp  portexposure.h  regiondata.h  roi.h  subflowsupport.h  visioncontext.cpp  visioncontext.h  visionimage.cpp  visionimage.h
(+78 files in other folders)
